Reorganize code into appropriate classes and packages. Add tags as field to object instead of wrapping object with tag. Update api docs. Update curl scripts.
